update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 services:
-  web:
+  api:
+    container_name: api
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
-    volumes:
-      - .:/app
+    # volumes:
+    #   - .:
     environment:
       - DATABASE_READ_URL=postgres://postgres:postgres@db:5432/postgres
       - DATABASE_WRITE_URL=postgres://postgres:postgres@db:5433/postgres
@@ -15,6 +16,7 @@ services:
       - db-write
       - cache
   db-read:
+    container_name: db-read
     image: postgres:13
     environment:
       - POSTGRES_USER=postgres
@@ -25,6 +27,7 @@ services:
     volumes:
       - db-read:/var/lib/postgresql/data
   db-write:
+    container_name: db-write
     image: postgres:13
     environment:
       - POSTGRES_USER=postgres
@@ -35,6 +38,7 @@ services:
     volumes:
       - db-write:/var/lib/postgresql/data
   cache:
+    container_name: cache
     image: redis:7
     ports:
       - "6379:6379"
